# rust-image-processor

./: .gitignore  CLAUDE.md  README.md  sugi-img.code-workspace
py_jpeg_converter/: pyproject.toml
py_jpeg_processor/: main.py  pyproject.toml
python/: pyproject.toml
python/py_jpeg_converter/: pyproject.toml
python/scripts/jpeg_compressor/: main.py
python/scripts/jpeg_counter/: README.md  main.py
rust/: Cargo.toml
rust/jpeg_compressor/: Cargo.toml  README.md
rust/jpeg_compressor/src/: cli.rs  compressor.rs  lib.rs  logger.rs  main.rs  util.rs
rust/jpeg_compressor/src/util/: formatter.rs
rust/jpeg_compressor/src/util/formatter/: str_formatter.rs
rust/jpeg_compressor/src/util/time/: time_util.rs
rust/jpeg_converter/: Cargo.toml
rust/jpeg_converter/src/: lib.rs  main.rs  processor.rs
rust/src/: main.rs
rust_jpeg_converter/: Cargo.toml
rust_jpeg_converter/src/: lib.rs  logger.rs  main.rs
rust_jpeg_processor/: .gitignore  Cargo.toml  README.md  lecture_README.md
rust_jpeg_processor/src/: cli.rs
